# beads-web

./: .gitignore  CLAUDE.md  next.config.js  package-lock.json  package.json
.claude/: settings.json
server/: Cargo.toml
server/src/: db.rs
server/src/routes/: beads.rs  projects.rs
src/app/: page.tsx
src/app/project/: kanban-board.tsx
src/components/: bead-card.tsx  design-doc-viewer.tsx  epic-card.tsx  kanban-column.tsx  update-banner.tsx
src/hooks/: use-beads.ts
src/lib/: api.ts  design-doc.ts
